--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <body>
 <h1>Hola Paraguaná</h1>
+  <h2>esto es un texto de prueba</h2>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
