--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <body>
 <h1>Hola Paraguaná</h1>
   <h2>esto es un texto de prueba</h2>
-<p>I'm hosted with GitHub Pages.</p>
+<p>Hola Gente</p>
 </body>
 </html>
